--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,5 +1,5 @@
 .heroHeader{
-  background: url('../../images/index1.jpg') no-repeat;
+  background: url('../images/index1.jpg') no-repeat;
   background-size: cover;
   background-position: center center;
   height: 870px;
