--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -13,7 +13,7 @@
   padding-bottom: 8px;
   h1 a{
     display: block;
-    background: url('../../images/d’Perfume.png') no-repeat;
+    background: url('../images/d’Perfume.png') no-repeat;
     width: 120px;
     height: 38px;
     text-indent: 101%;
@@ -91,8 +91,8 @@
       display: block;
       width: 100%;
       color: #fff;
-      padding-top: 16px;
-      padding-bottom: 16px;
+      padding-top: $spacer-2;
+      padding-bottom: $spacer-2;
       border-bottom: 1px solid #fff;
     }
     .menu li a:hover{
