--- a/scss/helpers/util.scss
+++ b/scss/helpers/util.scss
@@ -2,10 +2,6 @@
   margin-top: 10px;
 }
 
-.mt-8{
-  margin-top: 80px;
-}
-
 .mb-1{
   margin-bottom: 10px;
 }
@@ -14,8 +10,16 @@
   margin-bottom: 60px;
 }
 
+.mb-8{
+  margin-bottom: 80px;
+}
+
 .ml-1{
   margin-left: 10px;
+}
+
+.mr-1{
+  margin-right: 10px;
 }
 
 .ml-3{
@@ -28,4 +32,8 @@
 
 .pt-1{
   padding-top: 10px;
+}
+
+.pt-8{
+  padding-top: 80px;
 }
