--- a/css/all.css
+++ b/css/all.css
@@ -144,7 +144,7 @@ a {
   display: -ms-flexbox;
   display: flex;
 }
-.header .menu li {
+.header .menu a {
   color: #8D8D8D;
   font-size: 24px;
 }
@@ -819,6 +819,7 @@ footer .footer-menu a {
           justify-content: center;
 }
 .pagination a {
+  color: #8D8D8D;
   font-size: 20px;
   line-height: 30px;
 }
