--- a/scss/pages/_product.scss
+++ b/scss/pages/_product.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   @include mobile{
-    margin-top: 42px;
+    padding-top: 42px;
     margin-bottom: 42px;
   }
 }
