--- a/scss/helpers/util.scss
+++ b/scss/helpers/util.scss
@@ -2,6 +2,14 @@
   margin-top: 10px;
 }
 
+.mt-2{
+  margin-top: 10px;
+}
+
+.mt-8{
+  margin-top: 80px;
+}
+
 .mb-1{
   margin-bottom: 10px;
 }
@@ -36,4 +44,8 @@
 
 .pt-8{
   padding-top: 80px;
+}
+
+.pb-8{
+  padding-bottom: 80px;
 }
