--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -1,9 +1,87 @@
 .login{
   display: flex;
+  @include mobile{
+    flex-wrap: wrap;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 
 .login-img{
   width: 730px;
   height: 730px;
-  background: url('../../images/login1.jpg');
+  background: url('../images/login1.jpg') no-repeat;
+  background-position: center center;
+  background-size: cover;
+  @include mobile{
+    width: 100%;
+    height: 220px;
+  }
+}
+
+.login-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @include mobile{
+    margin-left: 0;
+    margin-top: 28px;
+    margin-bottom: 66px
+  }
+  h2{
+    font-size: $topic-fz;
+    font-weight: bold;
+    line-height: 48px;
+    margin-bottom: 12px;
+  }
+}
+
+.login-form{
+  width: 350px;
+  p{
+    margin-bottom: 4px;
+    line-height: 22px;
+  }
+  input{
+    width: 100%;
+    padding: 10px 12px;
+  }
+}
+
+.login-method{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 36px;
+  a{
+    display: block;
+    color: $theme-color;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  .register-btn{
+    border: 1px solid $theme-color;
+    padding: $spacer-1 $spacer-2;
+    background: $white;
+    color: $theme-color;
+    border-radius: 3px;
+    margin-right: $spacer-1;
+    &:hover{
+      cursor: pointer;
+      background: $theme-color;
+      color: $white;
+    }
+  }
+  .login-btn{
+    background: $theme-color;
+    color: $white;
+    border: 1px solid $theme-color;
+    padding: $spacer-1 $spacer-2;
+    border-radius: 3px;
+    &:hover{
+      cursor: pointer;
+      background: #6C4700;
+    }
+  }
 }
