--- a/scss/helpers/_util.scss
+++ b/scss/helpers/_util.scss
@@ -6,12 +6,20 @@
   margin-top: 10px;
 }
 
+.mt-3{
+  margin-top: 30px;
+}
+
 .mt-8{
   margin-top: 80px;
 }
 
 .mb-1{
   margin-bottom: 10px;
+}
+
+.mb-3{
+  margin-bottom: 30px;
 }
 
 .mb-6{
@@ -44,6 +52,10 @@
 
 .pt-8{
   padding-top: 80px;
+}
+
+.pb-6{
+  padding-bottom: 60px;
 }
 
 .pb-8{
