--- a/scss/pages/_product.scss
+++ b/scss/pages/_product.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   @include mobile{
     padding-top: 42px;
-    margin-bottom: 42px;
+    padding-bottom: 42px;
   }
 }
 
