--- a/scss/helpers/_util.scss
+++ b/scss/helpers/_util.scss
@@ -18,6 +18,10 @@
   margin-bottom: 10px;
 }
 
+.mb-2{
+  margin-bottom: 20px;
+}
+
 .mb-3{
   margin-bottom: 30px;
 }
@@ -42,6 +46,10 @@
   margin-left: 30px;
 }
 
+.pl-1{
+  padding-left: 10px;
+}
+
 .pb-1{
   padding-bottom: 10px;
 }
@@ -56,6 +64,10 @@
 
 .pb-6{
   padding-bottom: 60px;
+}
+
+.pb-2{
+  padding-bottom: 20px;
 }
 
 .pb-8{
