--- a/scss/helpers/_variable.scss
+++ b/scss/helpers/_variable.scss
@@ -2,6 +2,8 @@ $secondary-color: #8D8D8D;
 $more-color: #AC8A46;
 $theme-color: #916000;
 $index-bg-color: #E0E0E0;
+$order-color: #848484;
+$form-color: #818A91;
 $title-fz: 24px;
 $content-fz: 20px;
 $topic-fz: 32px;
@@ -11,5 +13,6 @@ $spacer-2: $spacer-1 *2;
 $spacer-3: $spacer-1 *3;
 $spacer-4: $spacer-1 *4;
 $spacer-5: $spacer-1 *5;
+$spacer-6: $spacer-1 *6;
 
 $white: #fff;
